fix arrow icon not centered

--- a/index.css
+++ b/index.css
@@ -224,6 +224,7 @@ button {
   margin-top: 2rem;
   z-index: 2;
   background-color: hsl(var(--clr-purple));
+  align-items: center;
 }
 
 button:hover,
@@ -241,7 +242,7 @@ button:focus {
   background-color: hsl(var(--clr-light-grey));
   height: 1px;
   position: absolute;
-  bottom: 2rem;
+  bottom: 1.85rem;
   z-index: 1;
 }
 
